fix: mudança de type de valor_total e status, e acrescentado relacionamento item_produto

--- a/cordeirostyle/src/main/resources/application.properties
+++ b/cordeirostyle/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.show-sql 				= true
 
 spring.datasource.url 						= jdbc:postgresql://localhost:5432/cordeirostyle
 spring.datasource.username					= postgres
-spring.datasource.password					= efanobg3
+spring.datasource.password					= 1234
 spring.datasource.driver-class-name 		= org.postgresql.Driver
 logging.level.org.hibernate.SQL				= INFO
 
