Fix: conserto do método de atualização do ItemPedidoController

--- a/cordeirostyle/bin/src/main/resources/application.properties
+++ b/cordeirostyle/bin/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.datasource.password					= 1234
 spring.datasource.driver-class-name 		= org.postgresql.Driver
 logging.level.org.hibernate.SQL				= INFO
 
+spring: mvc: pathmatch: matching-strategy: ANT_PATH_MATCHER
