feat: criação e implementação da entidade Imagem, imagemService e imagemRepository para criar imagem em Produto

--- a/cordeirostyle/src/main/resources/application.properties
+++ b/cordeirostyle/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=cordeirostyle
 
 spring.jpa.properties.hibernate.dialect 	= org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto			    = update
+spring.jpa.hibernate.ddl-auto			    = create-drop
 spring.jpa.hibernate.show-sql 				= true
 
 spring.datasource.url 						= jdbc:postgresql://localhost:5432/cordeirostyle
@@ -10,7 +10,7 @@ spring.datasource.password					= 1234
 spring.datasource.driver-class-name 		= org.postgresql.Driver
 logging.level.org.hibernate.SQL				= INFO
 
-spring: mvc: pathmatch: matching-strategy: ANT_PATH_MATCHER
+spring : mvc: pathmatch: matching-strategy: ANT_PATH_MATCHER
 
 spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=2525
