--- a/cordeirostyle/bin/src/main/resources/application.properties
+++ b/cordeirostyle/bin/src/main/resources/application.properties
@@ -11,3 +11,12 @@ spring.datasource.driver-class-name 		= org.postgresql.Driver
 logging.level.org.hibernate.SQL				= INFO
 
 spring: mvc: pathmatch: matching-strategy: ANT_PATH_MATCHER
+
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=482441a5d45a55
+spring.mail.password=63f602713ba0cd
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.enable=false
