--- a/cordeirostyle/bin/src/main/resources/application.properties
+++ b/cordeirostyle/bin/src/main/resources/application.properties
@@ -10,7 +10,12 @@ spring.datasource.password					= 1234
 spring.datasource.driver-class-name 		= org.postgresql.Driver
 logging.level.org.hibernate.SQL				= INFO
 
-spring: mvc: pathmatch: matching-strategy: ANT_PATH_MATCHER
+
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
+
 
 spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=2525
